# cortex-bot

./: Dockerfile  README.md  pyproject.toml
src/cortex/: consts.py  main.py  manager.py  messages.py
src/cortex/db/: database.py  tables.py
