[tool.poetry]
name = "cortex"
version = "0.0.3"
authors = ["Slava Petrov <slavapmk@gmail.com>"]
packages = [{ include = "cortex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "2.25.2"
sqlalchemy = "2.0.20"
datetime = "^5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cortex = "cortex.main:entrypoint"